methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:13: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime27.SlugTracking'
override def run()
             ^